<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:orientation="vertical">

    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/toolbar"
        style="@style/SolGuardToolbar.Collapsable"
        app:navigationIcon="@drawable/ic_baseline_arrow_back_24"
        app:title="@string/onboarding_grant_notifications_permissions_screen_title"
        app:titleCentered="true" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center_vertical"
        android:orientation="vertical">

        <com.airbnb.lottie.LottieAnimationView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center_horizontal"
            app:lottie_autoPlay="true"
            app:lottie_loop="true"
            app:lottie_rawRes="@raw/notifications" />

        <TextView
            android:id="@+id/message"
            style="@style/TextAppearance.SplashMessage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/onboarding_grant_notifications_permissions_message" />

    </LinearLayout>

    <Button
        android:id="@+id/next_button"
        style="@style/PrimaryButton.Onboarding"
        android:layout_marginBottom="@dimen/padding_default"
        android:text="@string/onboarding_grant_permissions_primary_button" />

    <TextView
        android:id="@+id/not_now"
        style="@style/TextAppearance.Link"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/padding_large"
        android:layout_marginBottom="@dimen/padding_large"
        android:text="@string/onboarding_grant_notification_permissions_not_now" />

</LinearLayout>