<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?android:windowBackground"
    android:paddingHorizontal="@dimen/padding_default"
    android:paddingBottom="@dimen/padding_default">

    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/icon_shimmer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25"
        app:shimmer_duration="@integer/shimmer_duration_ms"
        app:shimmer_highlight_alpha="@dimen/shimmer_alpha">

        <ImageView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/solguard_icon" />

    </com.facebook.shimmer.ShimmerFrameLayout>

    <TextView
        android:id="@+id/app_name"
        style="@style/TextAppearance.SolGuard.Hero"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/onboarding_splash_app_name"
        app:layout_constraintBottom_toTopOf="@id/next_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/icon_shimmer"
        app:layout_constraintVertical_bias="0" />


    <TextView
        android:id="@+id/welcome_message"
        style="@style/TextAppearance.SolGuard.Label1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_small"
        android:gravity="center"
        android:text="@string/onboarding_splash_message"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/app_name" />

    <Button
        android:id="@+id/next_button"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/padding_small"
        android:text="@string/onboarding_splash_get_started"
        app:layout_constraintBottom_toTopOf="@id/how_it_works"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/how_it_works"
        style="@style/TextAppearance.Link"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/onboarding_splash_how_it_works"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>