<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:id="@+id/content"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/confetti"
                android:layout_width="250dp"
                android:layout_height="250dp"
                android:layout_gravity="center"
                app:lottie_rawRes="@raw/confetti" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/title"
                    style="@style/TextAppearance.SolGuard.Title3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/onboarding_success_title" />

                <TextView
                    android:id="@+id/message"
                    style="@style/TextAppearance.SplashMessage"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/padding_default"
                    android:text="@string/onboarding_success_message" />

            </LinearLayout>

        </FrameLayout>

        <Button
            android:id="@+id/next_button"
            style="@style/PrimaryButton.Onboarding"
            android:text="@string/common_done" />

    </LinearLayout>

    <ProgressBar
        android:id="@+id/loading_indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />
</FrameLayout>