<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingBottom="@dimen/padding_large">

    <TextView
        android:id="@+id/screen_title"
        style="@style/TextAppearance.BottomSheetTitle"
        android:layout_width="wrap_content"
        android:layout_gravity="center_horizontal"
        android:drawablePadding="@dimen/padding_small"
        android:text="@string/enable_blackout_mode_screen_title" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.airbnb.lottie.LottieAnimationView
                android:id="@+id/animation"
                android:layout_width="120dp"
                android:layout_height="120dp"
                android:layout_gravity="center_horizontal"
                android:layout_marginVertical="@dimen/padding_large"
                android:scaleType="centerCrop"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:lottie_autoPlay="true"
                app:lottie_rawRes="@raw/clock"
                app:tint="?android:textColorPrimary" />

            <TextView
                style="@style/TextAppearance.SolGuard.Label1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_default"
                android:layout_marginBottom="@dimen/padding_default"
                android:text="@string/enable_blackout_mode_explanation"
                android:textColor="?android:textColorSecondary" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/amount_input_wrapper"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/padding_default"
                android:layout_marginVertical="@dimen/padding_default"
                app:endIconMode="custom"
                app:endIconTint="@null">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/amount_input"
                    style="@style/TextAppearance.SolGuard.Title4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal"
                    android:maxLines="1" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>
    </androidx.core.widget.NestedScrollView>

    <Button
        android:id="@+id/enabled"
        style="@style/PrimaryButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="@dimen/padding_large"
        android:text="@string/common_enable" />

</LinearLayout>